--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,5 @@
 // COLORS
-$color-primary: black;
+$color-primary: #000000;
 
 // FONTS
-$font-stack: "Arial", sans-serif;
+$font-stack: "Montserrat", "Arial", sans-serif;
