--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -12,13 +12,14 @@ html {
 }
 
 body {
+  height: 100%;
   display: flex;
   flex-direction: column;
-  height: 100%;
-  padding: 0;
   margin: 0;
+  padding: 0;
   overflow-x: hidden;
-  font-family: "Arial", sans-serif;
+  color: $color-primary;
+  font-family: $font-stack;
   background-color: #fff;
 }
 
