--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -1,2 +1,4 @@
-@import 'container';
-@import 'visually-hidden';
+@import "container";
+@import "visually-hidden";
+@import "heading";
+@import "description";
