--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -52,3 +52,12 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: "Gilroy";
+  src: url("../fonts/Gilroy-ExtraBold.woff2") format("woff2"),
+    url("../fonts/Gilroy-ExtraBold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
