--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -2,3 +2,8 @@
 @import "visually-hidden";
 @import "heading";
 @import "description";
+@import "logo";
+@import "site-link";
+@import "site-primary-link";
+@import "site-header";
+@import "site-footer";
