--- a/css/main.css
+++ b/css/main.css
@@ -579,6 +579,7 @@ img {
 }
 
 .site-primary-link {
+  display: inline-block;
   padding: 24px 56px;
   font-weight: 500;
   font-size: 16px;
@@ -593,15 +594,26 @@ img {
 
 .site-primary-link--middle {
   padding: 12px 38px;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 .site-primary-link--min {
   padding-top: 12px;
   padding-bottom: 12px;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 .site-primary-link--min span {
   font-weight: 700;
+}
+
+@media only screen and (max-width: 1024px) {
+  .site-primary-link {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
 }
 
 .site-header {
@@ -973,6 +985,326 @@ img {
   .site-footer__copyright {
     font-size: 12px;
     line-height: 32px;
+  }
+}
+
+.hero {
+  padding-top: 16px;
+  padding-bottom: 78px;
+}
+
+.hero__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.hero__content {
+  margin-right: 58px;
+}
+
+.hero__content-title {
+  max-width: 692px;
+  margin-top: 0;
+  margin-bottom: 24px;
+  font-weight: 700;
+  font-size: 64px;
+  line-height: 72px;
+  color: #050e14;
+}
+
+.hero__content-desc {
+  max-width: 692px;
+  margin-bottom: 24px;
+}
+
+.hero__demo-link {
+  margin-bottom: 192px;
+}
+
+.hero__play-video {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.hero__play-video-link {
+  width: 104px;
+  height: 104px;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  margin-right: 66px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  -webkit-box-shadow: 0px 4px 24px #ededed;
+          box-shadow: 0px 4px 24px #ededed;
+}
+
+.hero__play-video-inner {
+  width: 72px;
+  height: 72px;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #ffffff;
+  border-radius: 50%;
+  -webkit-box-shadow: 0px 4px 24px #ededed;
+          box-shadow: 0px 4px 24px #ededed;
+}
+
+.hero__play-video-img {
+  display: inline-block;
+}
+
+.hero__play-video-desc {
+  max-width: 322px;
+  position: relative;
+  margin: 0;
+  text-align: left;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 31px;
+  letter-spacing: 0.02em;
+  color: #1f272d;
+  opacity: 0.5;
+}
+
+.hero__play-video-desc::before {
+  width: 108px;
+  height: 74px;
+  position: absolute;
+  top: -57px;
+  left: -82px;
+  background-image: url(../img/arrow.svg);
+  background-repeat: no-repeat;
+  background-position: top right;
+  content: "";
+}
+
+.hero__grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 503px 503px;
+      grid-template-columns: 503px 503px;
+  -ms-grid-rows: 384px 384px;
+      grid-template-rows: 384px 384px;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.hero__grid-item {
+  overflow: hidden;
+  border-radius: 40px;
+}
+
+.hero__grid-item--purple {
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  grid-column-end: 3;
+}
+
+.hero__grid-item-img {
+  display: block;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.hero__play-video--tablet {
+  display: none;
+}
+
+.hero__demo-link--mobile {
+  display: none;
+}
+
+@media only screen and (max-width: 1675px) {
+  .hero__demo-link {
+    margin-bottom: 77px;
+  }
+  .hero__grid {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+  }
+}
+
+@media only screen and (max-width: 1400px) {
+  .hero__container {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .hero__content-title {
+    max-width: 450px;
+    margin-bottom: 16px;
+    font-size: 40px;
+    line-height: 56px;
+  }
+  .hero__content-desc {
+    max-width: 450px;
+    margin-bottom: 36px;
+    font-size: 16px;
+    line-height: 24px;
+  }
+  .hero__demo-link {
+    margin-bottom: 0;
+  }
+  .hero__play-video {
+    display: none;
+  }
+  .hero__play-video--tablet {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 90px;
+  }
+  .hero__grid {
+    -ms-grid-columns: 350px 350px;
+        grid-template-columns: 350px 350px;
+    -ms-grid-rows: 200px 200px;
+        grid-template-rows: 200px 200px;
+    gap: 24px;
+  }
+  .hero__grid-item {
+    border-radius: 24px;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .hero__content {
+    margin-right: 27px;
+  }
+  .hero__grid {
+    -ms-grid-columns: 238px 238px;
+        grid-template-columns: 238px 238px;
+    -ms-grid-rows: 180px 180px;
+        grid-template-rows: 180px 180px;
+  }
+}
+
+@media only screen and (max-width: 880px) {
+  .hero__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
+  }
+  .hero__content {
+    margin-right: 0;
+    margin-bottom: 48px;
+    text-align: center;
+  }
+  .hero__content-title {
+    max-width: 100%;
+  }
+  .hero__content-desc {
+    max-width: 100%;
+  }
+  .hero__grid {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+  }
+}
+
+@media only screen and (max-width: 590px) {
+  .hero {
+    padding-top: 36px;
+  }
+  .hero__content-title {
+    margin-bottom: 68px;
+    font-size: 32px;
+    line-height: 39px;
+  }
+  .hero__content-desc {
+    display: none;
+  }
+  .hero__play-video {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .hero__play-video--tablet {
+    display: none;
+  }
+  .hero__demo-link {
+    display: none;
+  }
+  .hero__demo-link-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 48px;
+  }
+  .hero__demo-link--mobile {
+    max-width: 235px;
+    display: block;
+  }
+  .hero__grid {
+    gap: 10px;
+    margin-top: 48px;
+  }
+  .hero__play-video {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .hero__play-video-link {
+    width: 64px;
+    height: 64px;
+  }
+  .hero__play-video-inner {
+    width: 44px;
+    height: 44px;
+  }
+  .hero__play-video-desc {
+    max-width: 154px;
+    font-size: 12px;
+    line-height: 24px;
+  }
+  .hero__play-video-desc::before {
+    width: 80px;
+    height: 50px;
+    top: -45px;
+    left: -62px;
+    background-size: contain;
   }
 }
 /*# sourceMappingURL=main.css.map */
