--- a/scss/blocks/_site-primary-link.scss
+++ b/scss/blocks/_site-primary-link.scss
@@ -1,4 +1,5 @@
 .site-primary-link {
+  display: inline-block;
   padding: 24px 56px;
   font-weight: 500;
   font-size: 16px;
@@ -12,13 +13,22 @@
 
 .site-primary-link--middle {
   padding: 12px 38px;
+  box-shadow: none;
 }
 
 .site-primary-link--min {
   padding-top: 12px;
   padding-bottom: 12px;
+  box-shadow: none;
 
   span {
     font-weight: 700;
+  }
+}
+
+@include breakpoint-down(1024px) {
+  .site-primary-link {
+    padding-top: 20px;
+    padding-bottom: 20px;
   }
 }
