--- a/scss/blocks/_container.scss
+++ b/scss/blocks/_container.scss
@@ -6,3 +6,10 @@
   padding-left: 20px;
   padding-right: 20px;
 }
+
+@include breakpoint-down(520px) {
+  .container {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
