--- a/css/main.css
+++ b/css/main.css
@@ -487,6 +487,13 @@ img {
   line-height: 32px;
 }
 
+@media only screen and (max-width: 1024px) {
+  .description {
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
+
 .logo {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -701,10 +708,11 @@ img {
   width: 100%;
   height: 100vh;
   position: absolute;
+  z-index: 100;
   top: 100%;
   left: 0;
   display: none;
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: #fff;
 }
 
 .site-header__modal--open {
@@ -1479,6 +1487,7 @@ img {
 @media only screen and (max-width: 690px) {
   .faq {
     padding-top: 32px;
+    padding-bottom: 32px;
   }
   .faq__desc {
     margin-bottom: 48px;
@@ -1633,10 +1642,125 @@ img {
 }
 
 @media only screen and (max-width: 550px) {
+  .product {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
   .product__content {
     padding-left: 16px;
     padding-right: 16px;
     background-image: url(../../img/devices-mobile.png);
+  }
+}
+
+.control {
+  padding-top: 83px;
+  padding-bottom: 122px;
+}
+
+.control__container {
+  padding-left: 85px;
+  padding-right: 85px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.control__heading--mobile {
+  display: none;
+}
+
+.control__img {
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+
+.control__content {
+  max-width: 775px;
+}
+
+.control__heading {
+  margin-top: 0;
+  margin-bottom: 24px;
+  font-weight: 700;
+  font-size: 64px;
+  line-height: 72px;
+  color: #050e14;
+}
+
+.control__heading span {
+  color: #53bcff;
+}
+
+.control__desc {
+  margin-bottom: 36px;
+}
+
+@media only screen and (max-width: 1700px) {
+  .control__container {
+    padding: 0;
+  }
+}
+
+@media only screen and (max-width: 1550px) {
+  .control__img {
+    width: 400px;
+    height: 410px;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  .control__img {
+    width: 353px;
+    height: 363px;
+  }
+  .control__content {
+    max-width: 500px;
+    padding-left: 10px;
+  }
+  .control__heading {
+    margin-bottom: 16px;
+    font-size: 40px;
+    line-height: 56px;
+  }
+}
+
+@media only screen and (max-width: 778px) {
+  .control {
+    padding-top: 32px;
+    padding-bottom: 23px;
+  }
+  .control__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .control__heading {
+    display: none;
+  }
+  .control__heading--mobile {
+    display: block;
+    margin-bottom: 48px;
+    font-size: 32px;
+    line-height: 39px;
+    text-align: center;
+  }
+  .control__content {
+    padding-left: 0;
+    text-align: center;
+  }
+  .control__desc {
+    display: none;
+  }
+  .control__img {
+    margin-bottom: 48px;
   }
 }
 /*# sourceMappingURL=main.css.map */
