--- a/scss/blocks/_description.scss
+++ b/scss/blocks/_description.scss
@@ -7,3 +7,10 @@
   font-size: 18px;
   line-height: 32px;
 }
+
+@include breakpoint-down(1024px) {
+  .description {
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
