--- a/scss/blocks/_site-header.scss
+++ b/scss/blocks/_site-header.scss
@@ -63,10 +63,11 @@
   width: 100%;
   height: 100vh;
   position: absolute;
+  z-index: 100;
   top: 100%;
   left: 0;
   display: none;
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: #fff;
 }
 
 .site-header__modal--open {
