--- a/scss/blocks/_heading.scss
+++ b/scss/blocks/_heading.scss
@@ -5,3 +5,17 @@
   font-size: 48px;
   line-height: 72px;
 }
+
+@include breakpoint-down(1024px) {
+  .heading {
+    font-size: 30px;
+    line-height: 44px;
+  }
+}
+
+@include breakpoint-down(600px) {
+  .heading {
+    font-size: 24px;
+    line-height: 32px;
+  }
+}
